--- a/transfer_price_ categorization.ipynb
+++ b/transfer_price_ categorization.ipynb
@@ -215,7 +215,7 @@
     }
    ],
    "source": [
-    "df = pd.read_csv('D:/Causal ML/project/transfers-master/data/transfers1.6.csv')\n",
+    "df = pd.read_csv('../transfers1.6.csv')\n",
     "df.head()"
    ]
   },
